--- a/2024-0229/for.html
+++ b/2024-0229/for.html
@@ -29,10 +29,10 @@
 
        document.write(num)
 
-       let mynum = 100;
+    //    let mynum = 100;
 
-        mynum = 10;
-       document.write(mynum)
+    //     mynum = 10;
+    //    document.write(mynum)
 
         // for(초기값; 조건문; 증감){    }
 
